--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     </div>
 </div>
 <script>
+    Dragging();
     //--------------------Creating-new-column--------------------
 function createNewColumn() {
   
